# ChannelModeling

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  MarkovChannel.cpp  MarkovResearch.cpp  MarkovResearchSec.cpp  Research.ipynb  a.out  output.csv  pch.h  plotter.ipynb  result.json  result4.json  result5.json  result6.json  result_exactly_the_same.json  test.cpp  test.txt  test1.cpp  test2.cpp
.cache/clangd/index/: BinaryGenerator.hpp.626D3DA989AD79FA.idx  BinaryGenerator.hxx.7F9E104EA69A44EF.idx  BinarySymmetricChannel.hpp.278875D4A230A8B6.idx  MarkovBinaryChannel.hpp.6C323F92A622255E.idx  Matrix.hxx.D75CB7694389E47D.idx  (+13 more)
.clangd/index/: BinaryGenerator.hxx.7F9E104EA69A44EF.idx  MarkovChannel.cpp.B5D3CA6E3C9309B2.idx  MarkovChannel.hxx.0243DDD497ADDF54.idx  MarkovChannel.hxx.7109E949EF0990F6.idx  MarkovResearch.cpp.1282DA1165237648.idx  Matrix.hxx.D75CB7694389E47D.idx  UniformDoubleDistr.hxx.F029965D059C18E8.idx  channel.cxx.8F8E195488A8C03D.idx  channel.hxx.BD5C1D72DC3A84BF.idx  metainfo.hxx.7938ADE716DD7046.idx  test.cpp.26BD23B21516FA8B.idx  unitproto.hxx.E58B756A631C9C24.idx
Examples/: MarkovResearchSec.cpp  Research.ipynb  output.csv  test.cpp  test2.cpp
html/: BinaryGenerator_8hpp_source.html  BinarySymmetricChannel_8hpp_source.html  MarkovBinaryChannel_8hpp_source.html  Matrix_8hxx_source.html  RepetitionCoder_8hpp_source.html  annotated.html  channel_8hpp_source.html  classBinaryGenerator-members.html  classBinaryGenerator.html  classBinaryGenerator__coll__graph.map  classBinaryGenerator__coll__graph.md5  classBinaryGenerator__inherit__graph.map  classBinaryGenerator__inherit__graph.md5  classBinarySymmetricChannel-members.html  classBinarySymmetricChannel.html  classBinarySymmetricChannel__coll__graph.map  classBinarySymmetricChannel__coll__graph.md5  classBinarySymmetricChannel__inherit__graph.map  classBinarySymmetricChannel__inherit__graph.md5  classMarkovBinaryChannel-members.html  classMarkovBinaryChannel.html  classMarkovBinaryChannel__coll__graph.map  classMarkovBinaryChannel__coll__graph.md5  classMarkovBinaryChannel__inherit__graph.map  classMarkovBinaryChannel__inherit__graph.md5  classMetaInfo-members.html  classMetaInfo.html  classRepetitionDecoder-members.html  classRepetitionDecoder.html  classRepetitionDecoder__coll__graph.map  classRepetitionDecoder__coll__graph.md5  classRepetitionDecoder__inherit__graph.map  classRepetitionDecoder__inherit__graph.md5  classRepetitionEncoder-members.html  classRepetitionEncoder.html  classRepetitionEncoder__coll__graph.map  classRepetitionEncoder__coll__graph.md5  classRepetitionEncoder__inherit__graph.map  classRepetitionEncoder__inherit__graph.md5  classes.html  (+91 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
include/: MarkovChannel.hxx  channel.hpp  channel.hxx  metainfo.hxx  unitproto.hpp  unitproto.hxx
include/BasicUnits/: BCH.hpp  BinaryGenerator.hpp  BinaryGenerator.hxx  BinarySymmetricChannel.hpp  BinarySymmetricChannel.hxx  DataLogger.hpp  ErrorCounter.hpp  GaussianChannel.hpp  MarkovBinaryChannel.hpp  MarkovBinaryChannel.hxx  Modulator.hpp  RepetitionCoder.hpp
include/LDPC/: CodewordGenerator.hpp  Decoder.hpp
include/Utility/: Matrix.hxx  UniformDoubleDistr.hxx
latex/: annotated.tex  classBinaryGenerator.tex  classBinaryGenerator__coll__graph.md5  classBinaryGenerator__inherit__graph.md5  classBinarySymmetricChannel.tex  classBinarySymmetricChannel__coll__graph.md5  classBinarySymmetricChannel__inherit__graph.md5  classMarkovBinaryChannel.tex  classMarkovBinaryChannel__coll__graph.md5  classMarkovBinaryChannel__inherit__graph.md5  classMetaInfo.tex  classRepetitionDecoder.tex  classRepetitionDecoder__coll__graph.md5  classRepetitionDecoder__inherit__graph.md5  classRepetitionEncoder.tex  classRepetitionEncoder__coll__graph.md5  classRepetitionEncoder__inherit__graph.md5  hierarchy.tex  refman.tex  structBinaryGenerator_1_1GeneratorOut.tex  structEmptyObject.tex  structMatrix.tex  structMatrix_1_1RowWrapper.tex  structUnitProto.tex  structUnitProto_1_1UnitInfo.tex  structUnitProto__coll__graph.md5  structarguments__of.tex  structarguments__of_3_01Obj_01_4.tex  structarguments__of_3_01Out__t_07Ins__t_8_8_8_08_4.tex  structarguments__of_3_01Out__t_07Obj_1_1_5_08_07Ins__t_8_8_8_08_01const_01_4.tex  structarguments__of_3_01Out__t_07Obj_1_1_5_08_07Ins__t_8_8_8_08_4.tex  structresult__of.tex  structresult__of_3_01Obj_01_4.tex  structresult__of_3_01Out__t_07Ins__t_8_8_8_08_4.tex  structresult__of_3_01Out__t_07Obj_1_1_5_08_07Ins__t_8_8_8_08_01const_01_4.tex  structresult__of_3_01Out__t_07Obj_1_1_5_08_07Ins__t_8_8_8_08_4.tex
src/: channel.cpp  channel.cxx
src/BasicUnits/: BCH.cxx
